# mevault-cli

./: Cargo.toml  LICENSE  README.md
mevault-cli/: Cargo.toml
mevault-cli/src/: main.rs
mevault-cli/src/commands/: add.rs  config.rs  doctor.rs  export.rs  get.rs  import.rs  init.rs  list.rs  lock.rs  log.rs  mod.rs  run.rs  status.rs  unlock.rs  verify.rs
mevault-core/: Cargo.toml
mevault-core/migrations/: 0001_audit_events.sql
mevault-core/src/: lib.rs
mevault-core/src/allowlist/: mod.rs
mevault-core/src/audit/: mod.rs
mevault-core/src/config/: mod.rs
mevault-core/src/crypto/: mod.rs
mevault-core/src/export/: mod.rs
mevault-core/src/grants/: mod.rs
mevault-core/src/identity/: mod.rs  win32.rs
mevault-core/src/ipc/: mod.rs  protocol.rs
mevault-core/src/proxy/: mod.rs
mevault-core/src/session/: mod.rs
mevault-core/src/vault/: mod.rs
mevault-core/tests/: grants_security.rs  vault_integration.rs
mevault-sdk/: Cargo.toml
mevault-sdk/src/: lib.rs
winget/: MeVault.MeVaultCLI.installer.yaml  MeVault.MeVaultCLI.locale.en-US.yaml  MeVault.MeVaultCLI.yaml
