# This file is used by the sync-oss-cli.yml workflow to build the public mevault-cli repo.
# It is the workspace root for the open-source CLI; mevault-app is excluded (private).

[workspace]
resolver = "2"
members = [
    "mevault-core",
    "mevault-cli",
    "mevault-sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MeVault"]
license = "Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP server
axum = { version = "0.7", features = ["http1", "json"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
# Crypto / zeroize
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
# IDs and time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
thiserror = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI parsing
clap = { version = "4", features = ["derive"] }
# Glob matching
glob = "0.3"
# Random
rand = "0.8"
# HTTP client (kept for proxy integration tests in mevault-core dev-dependencies)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Crypto for export/import
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
fs2 = "0.4"
