[package]
name = "mevault-core"
version.workspace = true
edition.workspace = true

[features]
test-helper = []

[[bin]]
name = "vault-write-helper"
path = "src/bin/vault_write_helper.rs"
required-features = ["test-helper"]
test = false
bench = false

[dependencies]
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sqlx.workspace = true
zeroize.workspace = true
secrecy.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
glob.workspace = true
rand.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
base64.workspace = true
fs2.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Pipes",
    "Win32_System_JobObjects",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tower = "0.5"
reqwest.workspace = true
